Sidebar now has correct spacing away from tweets

--- a/src/app/components/side-bar/side-bar-item/side-bar-item.component.css
+++ b/src/app/components/side-bar/side-bar-item/side-bar-item.component.css
@@ -3,6 +3,8 @@
   font-weight: bold;
   font-size: 19px;
   color: var(--primary-text-color);
+
+  cursor: pointer;
 }
 
 .container :hover {
