--- a/src/styles.css
+++ b/src/styles.css
@@ -16,7 +16,7 @@
   --background-color: #15202b;
   --background-color-hover: #192734;
   --background-color-hover2: red; /* color not set yet */
-  --primary-text-color: #d8dadc;
+  --primary-text-color: #ffffff;
   --secondary-text-color: #8796a0;
   --border-color: #38444d;
 }
